--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2021" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "commonjs" /* Specify what module code is generated. */,
     "rootDir": "./src/" /* Specify the root folder within your source files. */,
-    "outDir": "./built/" /* Specify an output folder for all emitted files. */,
+    "outDir": "./build/" /* Specify an output folder for all emitted files. */,
     "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied `any` type.. */
